--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,9 @@
   "name": "whichdash-org",
   "private": true,
   "dependencies": {
-    "modernizr": "~2.8.3"
+    "bourbon": "~4.2.4",
+    "modernizr": "~2.8.3",
+    "neat": "~1.7.2",
+    "zepto": "~1.1.6"
   }
 }
